test/functions/diten/badwhere.good
badwhere.chpl:4: In function 'foo':
badwhere.chpl:4: error: invalid where clause
  badwhere.chpl:1: called as foo(x: string, y: string, z: bool)
